fixed spacing on landing page to increase image size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,7 @@
 
 /* landing section */
 #landing-image  {
-    flex: 1;
+    flex:3;
     background: url('../images/ninja-2.png') no-repeat; /* fallback */
     background-size:contain;
     background-position: center;
@@ -69,7 +69,7 @@
     display:flex;
     padding: 1em;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items:center;
     background: #005AA7;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #FFFDE4, #005AA7);  /* Chrome 10-25, Safari 5.1-6 */
